--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
+PORT = 8787
+ACCESS_TOKEN_KEY = jfjhsfuhefiucndkjsc
 MONGO_URL = mongodb+srv://vinodjantikar:vinodjantikar@cluster0.sx66oai.mongodb.net/pococare-assgn?retryWrites=true&w=majority
